# riix

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  README.md  description.md  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pypi-publish.yml
docs/: description.md  index.html  riix.html  search.js  test_glicko.html  test_glicko2.html  test_trueskill.html  theme.css
docs/riix/: core.html  eval.html  metrics.html  models.html  utils.html
docs/riix/core/: base.html  test.html
docs/riix/models/: autograd_rating_system.html  baselines.html  constant_variance_glicko.html  elo.html  elo_davidson.html  elomentum.html  gen_elo.html  glicko.html  glicko2.html  iterative_markov.html  melo.html  online_disc_decomp.html  online_rao_kupper.html  (+9 more)
examples/: elo_example.ipynb  split_example.ipynb
riix/: __init__.py  base.py  benchmark.py  configs.py  count_based_methods.py  datasets.py  elo.py  equivalence.py  eval.py  generate_test_data.py  glicko.py  glicko2.py  metrics.py  preprocessing.py  raters.py  simplified_kalman_filter.py  sort.py  sweep.py  test.py  test_naive.py  trueskill.py  utils.py  weng_lin.py
riix/core/: base.py
riix/gradient/: opper.py
riix/models/: __init__.py  autograd_rating_system.py  baselines.py  constant_variance_glicko.py  elo.py  elo_davidson.py  elomentum.py  gen_elo.py  glicko.py  glicko2.py  imm.py  iterative_markov.py  melo.py  online_disc_decomp.py  online_rao_kupper.py  skf.py  spectral_dynamic_ranking.py  template.py  temporal_massey.py  trueskill.py  velo.py  weng_lin.py  weng_lin_bradley_terry.py  weng_lin_thurstone_mosteller.py  yuksel_2024.py
riix/naive/: skf_array.py  skf_glicko.py  skf_trueskill.py
riix/skf/: skf.py  skf_array.py  skf_batched.py  skf_glicko.py  skf_list.py  skf_naive.py  skf_trueskill.py
riix/utils/: __init__.py  constants.py  data_utils.py  date_utils.py  math_utils.py
tests/: test_glicko.py  test_glicko2.py  test_trueskill.py
(+4 files in other folders)
