[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riix"
version = "0.0.0-dev"
description = "vectorized implementations of online rating systems"
readme = "README.md"
authors = [
    {name="Clayton Thorrez", email="claytonthorrez@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pdoc"
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
